--- a/02-ReactB2C/src/index.css
+++ b/02-ReactB2C/src/index.css
@@ -1,69 +1,326 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+.nota-header {
+  color: #333;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+.btn-soliss,
+.btn-soliss:focus,
+.btn-soliss:active {
+  color: #fff;
+  background-image: -ms-linear-gradient(bottom, #e50766 0%, #fc75ae 100%);
+  background-image: -moz-linear-gradient(bottom, #e50766 0%, #fc75ae 100%);
+  background-image: -o-linear-gradient(bottom, #e50766 0%, #fc75ae 100%);
+  background-image: -webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    color-stop(0, #e50766),
+    color-stop(1, #fc75ae)
+  );
+  background-image: -webkit-linear-gradient(bottom, #e50766 0%, #fc75ae 100%);
+  background-image: linear-gradient(to top, #e50766 0%, #fc75ae 100%);
+  border-color: transparent;
+  font-size: 16px !important;
+  padding: 6px 12px !important;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+.btn-soliss:hover,
+.open > .dropdown-toggle.btn-soliss {
+  color: #fff;
+  background-image: -ms-linear-gradient(bottom, #009bcc 0%, #3fcefb 100%);
+  background-image: -moz-linear-gradient(bottom, #009bcc 0%, #3fcefb 100%);
+  background-image: -o-linear-gradient(bottom, #009bcc 0%, #3fcefb 100%);
+  background-image: -webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    color-stop(0, #009bcc),
+    color-stop(1, #3fcefb)
+  );
+  background-image: -webkit-linear-gradient(bottom, #009bcc 0%, #3fcefb 100%);
+  background-image: linear-gradient(to top, #009bcc 0%, #3fcefb 100%);
+  border-color: transparent;
+  outline-color: transparent;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.btn-soliss.disabled,
+.btn-soliss[disabled],
+fieldset[disabled] .btn-soliss,
+.btn-soliss.disabled:hover,
+.btn-soliss[disabled]:hover,
+fieldset[disabled] .btn-soliss:hover,
+.btn-soliss.disabled:focus,
+.btn-soliss[disabled]:focus,
+fieldset[disabled] .btn-soliss:focus,
+.btn-soliss.disabled.focus,
+.btn-soliss[disabled].focus,
+fieldset[disabled] .btn-soliss.focus,
+.btn-soliss.disabled:active,
+.btn-soliss[disabled]:active,
+fieldset[disabled] .btn-soliss:active,
+.btn-soliss.disabled.active,
+.btn-soliss[disabled].active,
+fieldset[disabled] .btn-soliss.active {
+  background-image: -ms-linear-gradient(bottom, #009bcc 0%, #3fcefb 100%);
+  background-image: -moz-linear-gradient(bottom, #009bcc 0%, #3fcefb 100%);
+  background-image: -o-linear-gradient(bottom, #009bcc 0%, #3fcefb 100%);
+  background-image: -webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    color-stop(0, #009bcc),
+    color-stop(1, #3fcefb)
+  );
+  background-image: -webkit-linear-gradient(bottom, #009bcc 0%, #3fcefb 100%);
+  background-image: linear-gradient(to top, #009bcc 0%, #3fcefb 100%);
+  border-color: transparent;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
+.btn-soliss .badge {
+  color: #1889e6;
+  background-color: #fff;
+}
+
+.btn-styleless {
+  background-color: inherit;
+  border: 0;
+  color: inherit;
+  font-size: 100%;
   font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  padding: 0;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.dot {
+  height: 15px;
+  width: 15px;
+  background-color: rgb(13, 110, 253);
+  border-radius: 50%;
+  display: inline-block;
+}
+
+.nav-item:hover {
+  /* background-color: lightgray; */
+  background-color: #f8f9fa;
+  cursor: pointer;
+}
+
+/*Set the row height to the viewport*/
+.row-height {
+  height: 75vh;
+}
+
+/*Set up the columns with a 100% height, body color and overflow scroll*/
+
+.selector {
+  height: 90%;
+
+  overflow-y: scroll;
+}
+
+.contenido {
+  height: 100%;
+  overflow-y: scroll;
+}
+
+.textAnotacion {
+  resize: none !important;
+  /* height: 280px !important; */
+}
+
+/*Remove the scrollbar from Chrome, Safari, Edge and IE*/
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
+}
+
+* {
+  -ms-overflow-style: none !important;
+}
+
+.selector::-webkit-scrollbar {
+  width: 16px;
+}
+
+.selector::-webkit-scrollbar-track {
+  background-color: #e4e4e4;
+  border-radius: 100px;
+}
+
+.selector::-webkit-scrollbar-thumb {
+  background-color: #dc006b;
+  border-radius: 100px;
+}
+
+.activeSelected {
+  border: #fc4f9b 2px solid !important;
+}
+
+.activeMarginPading {
+  padding: 23px !important;
+  margin: -16px !important;
+  margin-top: 0px !important;
+}
+
+.row-target {
+  --bs-gutter-x: 0rem !important;
+  --bs-gutter-y: 0 !important;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: calc(-1 * var(--bs-gutter-y));
+  margin-right: calc(-0.5 * var(--bs-gutter-x));
+  margin-left: calc(-0.5 * var(--bs-gutter-x));
+}
+
+.padreHtml {
+  max-width: 820px;
+}
+
+/*Para tablas*/
+.thead-soliss {
+  background-color: #ffc10700;
+  border-color: #ddd;
+  color: #333;
+  text-align: center;
+  border: 0px solid !important;
+}
+
+.thead-soliss-NoBorder {
+  background-color: #f5f5f5;
+  border-color: #ddd;
+  color: #333;
+  text-align: center;
+  border: 0px solid transparent !important;
+}
+
+.table-bordered th {
+  border: 0px solid !important;
+}
+
+table td,
+table th {
+  text-align: center !important;
+  font-size: 14px;
+}
+
+td span {
+  font-weight: bold !important;
+}
+
+/* Personalización Datatables*/
+/*Clases para modificar le título de la tabla*/
+.miTablaPersonalizada33 {
+  width: 32%;
+}
+
+.rdt_TableHeader {
+  background-color: #ffffff !important;
+  border-color: #ddd !important;
+  color: #333 !important;
+  border: #ddd 1px solid !important;
+  padding: 0.3rem !important;
+  text-align: center !important;
+  height: 30px !important;
+  min-height: 30px !important;
+
+  padding-bottom: 10px !important;
+  padding-top: 0px !important;
+}
+
+.rdt_TableHeader:first-child {
+  font-weight: bold !important;
+  font-size: 14px;
+  text-align: center !important;
+  padding: 0.3rem !important;
+  margin-bottom: 0 !important;
+  display: block !important;
+  color: #333 !important;
+}
+
+.rdt_TableHeader > div {
+  font-weight: bold !important;
+}
+
+.rdt_TableHeadRow {
+  /*background-color: #ffffff !important;*/
+  border-color: #ddd !important;
+  background-color: rgba(0, 0, 0, 0.05) !important;
+  color: #333 !important;
+  /* height: 42px !important;
+  min-height: 30px !important; */
+  height: 30px !important;
+  min-height: 30px !important;
+}
+
+.tituloTabla {
+  text-align: center !important;
+  font-size: 14px;
+  background-color: #ffffff !important;
+  border-color: #ddd !important;
+}
+
+/* clase para modificar la cabecera*/
+
+.rdt_TableCol_Sortable {
+  font-size: 14px !important;
+  font-weight: bold !important;
+}
+
+/* .rdt_TableCol {
+  border: 1px solid #2c3e50 !important;
+} */
+.rdt_TableBody td,
+.rdt_TableBody th {
+  padding: 0.3rem;
+}
+
+.rdt_TableBody {
+  border-collapse: collapse;
+}
+
+.rdt_TableRow {
+  display: table-row;
+  vertical-align: inherit;
+  border-color: inherit;
+  height: Auto !important;
+  min-height: 30px !important;
+}
+/* .agendaPeritaciones .rdt_TableRow{
+  display: table-row;
+  vertical-align: inherit;
+  border-color: inherit;
+  height: 30px !important;
+  min-height: 30px !important;
+} */
+
+.rdt_TableRow:nth-child(odd) {
+  /* background-color: rgba(0, 0, 0, 0.05); */
+  background: #fff;
+}
+
+.rdt_TableRow:nth-child(even) {
+  /* background: #fff; */
+  background-color: rgba(0, 0, 0, 0.05);
+}
+
+.rdt_TableRow:hover {
+  background-color: #d0d3d6;
+}
+
+.rdt_TableCol,
+.rdt_TableCell {
+  text-align: center !important;
+
+  margin-bottom: 0px !important;
+  font-size: 14px;
+
+  box-sizing: border-box;
+  display: table-cell;
+  border: 1px solid #dee2e6;
+  border-left: 1px solid #dee2e6;
+  padding-top: 5px !important;
+  padding-bottom: 5px !important;
+}
+.rdt_TableCell div:first-child {
+  white-space: normal !important;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
